[gd_scene load_steps=42 format=3 uid="uid://c0bxbhtgvobvb"]

[ext_resource type="Script" path="res://Scripts/Menus/FrontMenu.gd" id="1_qtiig"]
[ext_resource type="Texture2D" uid="uid://c0v1uu56orb7q" path="res://Sprites/Buttons/Button1x6/Button1x6Default.png" id="2_dqdh3"]
[ext_resource type="Script" path="res://Scripts/Menus/LabelGroup.gd" id="2_w7jqx"]
[ext_resource type="Texture2D" uid="uid://cq06moghj4ufu" path="res://Sprites/Buttons/Button1x6/Button1x6Pressed.png" id="3_r2rra"]
[ext_resource type="Texture2D" uid="uid://bd0ihfwea32xj" path="res://Sprites/Buttons/Button1x6/Button1x6Highlighted.png" id="4_o60lj"]
[ext_resource type="Texture2D" uid="uid://cj77yxcyjetpg" path="res://Sprites/Buttons/Button1x6/Button1x6Disabled.png" id="5_uy8jr"]
[ext_resource type="Texture2D" uid="uid://bplyjefijk5hg" path="res://Sprites/GameIcons/Play.png" id="6_s3pp7"]
[ext_resource type="Script" path="res://Scripts/Localization/TextureFlipper.gd" id="7_iswyn"]
[ext_resource type="Texture2D" uid="uid://bfkve8kgl0h08" path="res://Sprites/GameIcons/Settings.png" id="8_gn6tb"]
[ext_resource type="Texture2D" uid="uid://bceqxsrwbhqio" path="res://Sprites/GameIcons/Cross.png" id="9_vb3w7"]
[ext_resource type="Texture2D" uid="uid://u3p8800rnfw0" path="res://Sprites/Panels/ScreenCover.png" id="10_pe2ej"]
[ext_resource type="Script" path="res://Scripts/Menus/SettingsMenu.gd" id="11_hbyl3"]
[ext_resource type="Texture2D" uid="uid://botxnc31d51a0" path="res://Sprites/Buttons/ButtonArrowLeft/ButtonArrowLeftDefault.png" id="12_wbifo"]
[ext_resource type="Texture2D" uid="uid://c65fwbx3b3x06" path="res://Sprites/Buttons/ButtonArrowLeft/ButtonArrowLeftPressed.png" id="13_kkh62"]
[ext_resource type="Texture2D" uid="uid://b33ufkdin0nmt" path="res://Sprites/Buttons/ButtonArrowLeft/ButtonArrowLeftHighlighted.png" id="14_82g1t"]
[ext_resource type="Texture2D" uid="uid://bjw6q6v04tw8m" path="res://Sprites/Buttons/ButtonArrowLeft/ButtonArrowLeftDisabled.png" id="15_3yfbi"]
[ext_resource type="Script" path="res://Scripts/Localization/ButtonFlipper.gd" id="16_ghl0t"]
[ext_resource type="Texture2D" uid="uid://c2dcicixwcl2m" path="res://Sprites/Buttons/Button1x1/Button1x1Disabled.png" id="17_t8im1"]
[ext_resource type="Texture2D" uid="uid://b24co5pt6tfir" path="res://Sprites/Buttons/ButtonArrowRight/ButtonArrowRightDefault.png" id="18_ig36a"]
[ext_resource type="Texture2D" uid="uid://vcjm0o14c243" path="res://Sprites/Buttons/ButtonArrowRight/ButtonArrowRightPressed.png" id="19_1rg8y"]
[ext_resource type="Texture2D" uid="uid://3pp02nolbomj" path="res://Sprites/Panels/BlackSquare.png" id="19_vdkao"]
[ext_resource type="Texture2D" uid="uid://bewdsuibdik33" path="res://Sprites/Buttons/ButtonArrowRight/ButtonArrowRightHighlighted.png" id="20_2yatp"]
[ext_resource type="Texture2D" uid="uid://c8eb6kd7a4ap0" path="res://Sprites/Boards/Classic.png" id="20_ccjab"]
[ext_resource type="Texture2D" uid="uid://cswbggwvrtbad" path="res://Sprites/Buttons/ButtonArrowRight/ButtonArrowRightDisabled.png" id="21_p1mr6"]
[ext_resource type="Texture2D" uid="uid://cnduddhpfktfp" path="res://Sprites/Buttons/Button1x7/Button1x7Default.png" id="22_oby7b"]
[ext_resource type="Texture2D" uid="uid://bv187qaki5yav" path="res://Sprites/Buttons/Button1x7/Button1x7Pressed.png" id="23_1oqg4"]
[ext_resource type="Texture2D" uid="uid://dqchqpyq74t1v" path="res://Sprites/Buttons/Button1x7/Button1x7Highlighted.png" id="24_fv0ek"]
[ext_resource type="Texture2D" uid="uid://cp1sfy38p3va4" path="res://Sprites/Panels/WhiteSquare.png" id="24_oa823"]
[ext_resource type="Texture2D" uid="uid://brb5c0rfrphsj" path="res://Sprites/Buttons/Button1x7/Button1x7Disabled.png" id="25_ogjf2"]
[ext_resource type="Texture2D" uid="uid://bnfxgnpbtv5cl" path="res://Sprites/Sets/Western.png" id="26_cyp7s"]

[sub_resource type="LabelSettings" id="LabelSettings_46ms0"]
font_size = 27
font_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_mrith"]
font_size = 18
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_280a7"]
font_size = 18
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dvb2k"]
font_size = 18
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xrbav"]
font_size = 27
font_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_xsw7x"]
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_33qus"]
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_12pv3"]
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8ercr"]
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bxet5"]
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r7tdu"]
font_size = 18
font_color = Color(0, 0, 0, 1)

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 2

[node name="Front" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("2_w7jqx")

[node name="Menu" type="Control" parent="Front"]
anchors_preset = 0
script = ExtResource("1_qtiig")

[node name="Text" type="Label" parent="Front/Menu"]
layout_mode = 0
offset_left = -128.0
offset_top = -80.0
offset_right = 128.0
offset_bottom = -16.0
text = "Text.GameTitle"
label_settings = SubResource("LabelSettings_46ms0")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Play" type="TextureButton" parent="Front/Menu"]
layout_mode = 0
offset_left = -104.0
offset_top = 16.0
offset_right = 104.0
offset_bottom = 64.0
texture_normal = ExtResource("2_dqdh3")
texture_pressed = ExtResource("3_r2rra")
texture_hover = ExtResource("4_o60lj")
texture_disabled = ExtResource("5_uy8jr")

[node name="Icon" type="TextureRect" parent="Front/Menu/Play"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_s3pp7")
script = ExtResource("7_iswyn")

[node name="Text" type="Label" parent="Front/Menu/Play"]
layout_mode = 0
offset_left = 40.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Text.Play"
label_settings = SubResource("LabelSettings_mrith")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Settings" type="TextureButton" parent="Front/Menu"]
layout_mode = 0
offset_left = -104.0
offset_top = 80.0
offset_right = 104.0
offset_bottom = 128.0
texture_normal = ExtResource("2_dqdh3")
texture_pressed = ExtResource("3_r2rra")
texture_hover = ExtResource("4_o60lj")
texture_disabled = ExtResource("5_uy8jr")

[node name="Icon" type="TextureRect" parent="Front/Menu/Settings"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("8_gn6tb")

[node name="Text" type="Label" parent="Front/Menu/Settings"]
layout_mode = 0
offset_left = 40.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Text.Settings"
label_settings = SubResource("LabelSettings_280a7")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Quit" type="TextureButton" parent="Front/Menu"]
layout_mode = 0
offset_left = -104.0
offset_top = 144.0
offset_right = 104.0
offset_bottom = 192.0
texture_normal = ExtResource("2_dqdh3")
texture_pressed = ExtResource("3_r2rra")
texture_hover = ExtResource("4_o60lj")
texture_disabled = ExtResource("5_uy8jr")

[node name="Icon" type="TextureRect" parent="Front/Menu/Quit"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("9_vb3w7")

[node name="Text" type="Label" parent="Front/Menu/Quit"]
layout_mode = 0
offset_left = 40.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Text.Quit"
label_settings = SubResource("LabelSettings_dvb2k")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Settings" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("2_w7jqx")
visible_text = false

[node name="Menu" type="TextureRect" parent="Settings"]
visible = false
layout_mode = 0
offset_left = -144.0
offset_top = -288.0
offset_right = 144.0
offset_bottom = 288.0
texture = ExtResource("10_pe2ej")
script = ExtResource("11_hbyl3")

[node name="Text" type="Label" parent="Settings/Menu"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 272.0
offset_bottom = 80.0
text = "Text.Settings"
label_settings = SubResource("LabelSettings_xrbav")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="StartingMap" type="Control" parent="Settings/Menu"]
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 96.0
offset_right = 272.0
offset_bottom = 192.0

[node name="Text" type="Label" parent="Settings/Menu/StartingMap"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Text.StartingMap"
label_settings = SubResource("LabelSettings_xsw7x")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Board" type="Control" parent="Settings/Menu/StartingMap"]
anchors_preset = 0
offset_top = 32.0
offset_right = 128.0
offset_bottom = 96.0

[node name="Left" type="TextureButton" parent="Settings/Menu/StartingMap/Board"]
layout_mode = 0
offset_left = 4.0
offset_top = 16.0
offset_right = 36.0
offset_bottom = 48.0
texture_normal = ExtResource("12_wbifo")
texture_pressed = ExtResource("13_kkh62")
texture_hover = ExtResource("14_82g1t")
texture_disabled = ExtResource("15_3yfbi")
script = ExtResource("16_ghl0t")

[node name="Socket" type="TextureRect" parent="Settings/Menu/StartingMap/Board"]
layout_mode = 0
offset_left = 40.0
offset_top = 8.0
offset_right = 88.0
offset_bottom = 56.0
texture = ExtResource("17_t8im1")

[node name="Background" type="TextureRect" parent="Settings/Menu/StartingMap/Board/Socket"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("19_vdkao")

[node name="Icon" type="TextureRect" parent="Settings/Menu/StartingMap/Board/Socket"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("20_ccjab")

[node name="Right" type="TextureButton" parent="Settings/Menu/StartingMap/Board"]
layout_mode = 0
offset_left = 92.0
offset_top = 16.0
offset_right = 124.0
offset_bottom = 48.0
texture_normal = ExtResource("18_ig36a")
texture_pressed = ExtResource("19_1rg8y")
texture_hover = ExtResource("20_2yatp")
texture_disabled = ExtResource("21_p1mr6")
script = ExtResource("16_ghl0t")

[node name="Set" type="Control" parent="Settings/Menu/StartingMap"]
layout_mode = 3
anchors_preset = 0
offset_left = 128.0
offset_top = 32.0
offset_right = 256.0
offset_bottom = 96.0

[node name="Left" type="TextureButton" parent="Settings/Menu/StartingMap/Set"]
layout_mode = 0
offset_left = 4.0
offset_top = 16.0
offset_right = 36.0
offset_bottom = 48.0
texture_normal = ExtResource("12_wbifo")
texture_pressed = ExtResource("13_kkh62")
texture_hover = ExtResource("14_82g1t")
texture_disabled = ExtResource("15_3yfbi")
script = ExtResource("16_ghl0t")

[node name="Socket" type="TextureRect" parent="Settings/Menu/StartingMap/Set"]
layout_mode = 0
offset_left = 40.0
offset_top = 8.0
offset_right = 88.0
offset_bottom = 56.0
texture = ExtResource("17_t8im1")

[node name="Background" type="TextureRect" parent="Settings/Menu/StartingMap/Set/Socket"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("24_oa823")

[node name="Icon" type="TextureRect" parent="Settings/Menu/StartingMap/Set/Socket"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("26_cyp7s")

[node name="Right" type="TextureButton" parent="Settings/Menu/StartingMap/Set"]
layout_mode = 0
offset_left = 92.0
offset_top = 16.0
offset_right = 124.0
offset_bottom = 48.0
texture_normal = ExtResource("18_ig36a")
texture_pressed = ExtResource("19_1rg8y")
texture_hover = ExtResource("20_2yatp")
texture_disabled = ExtResource("21_p1mr6")
script = ExtResource("16_ghl0t")

[node name="Volume" type="Control" parent="Settings/Menu"]
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 224.0
offset_right = 272.0
offset_bottom = 296.0

[node name="Text" type="Label" parent="Settings/Menu/Volume"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Text.Volume"
label_settings = SubResource("LabelSettings_33qus")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Left" type="TextureButton" parent="Settings/Menu/Volume"]
layout_mode = 0
offset_left = 60.0
offset_top = 36.0
offset_right = 92.0
offset_bottom = 68.0
texture_normal = ExtResource("12_wbifo")
texture_pressed = ExtResource("13_kkh62")
texture_hover = ExtResource("14_82g1t")
texture_disabled = ExtResource("15_3yfbi")
script = ExtResource("16_ghl0t")

[node name="Value" type="Label" parent="Settings/Menu/Volume"]
layout_mode = 0
offset_left = 96.0
offset_top = 36.0
offset_right = 160.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "70%"
label_settings = SubResource("LabelSettings_12pv3")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Right" type="TextureButton" parent="Settings/Menu/Volume"]
layout_mode = 0
offset_left = 164.0
offset_top = 36.0
offset_right = 196.0
offset_bottom = 68.0
texture_normal = ExtResource("18_ig36a")
texture_pressed = ExtResource("19_1rg8y")
texture_hover = ExtResource("20_2yatp")
texture_disabled = ExtResource("21_p1mr6")
script = ExtResource("16_ghl0t")

[node name="Language" type="Control" parent="Settings/Menu"]
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 328.0
offset_right = 272.0
offset_bottom = 400.0

[node name="Text" type="Label" parent="Settings/Menu/Language"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Text.Language"
label_settings = SubResource("LabelSettings_8ercr")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Left" type="TextureButton" parent="Settings/Menu/Language"]
layout_direction = 2
layout_mode = 0
offset_left = 28.0
offset_top = 36.0
offset_right = 60.0
offset_bottom = 68.0
texture_normal = ExtResource("12_wbifo")
texture_pressed = ExtResource("13_kkh62")
texture_hover = ExtResource("14_82g1t")
texture_disabled = ExtResource("15_3yfbi")

[node name="Value" type="Label" parent="Settings/Menu/Language"]
layout_mode = 0
offset_left = 64.0
offset_top = 36.0
offset_right = 192.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Text.LanguageName"
label_settings = SubResource("LabelSettings_bxet5")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Right" type="TextureButton" parent="Settings/Menu/Language"]
layout_direction = 2
layout_mode = 0
offset_left = 196.0
offset_top = 36.0
offset_right = 228.0
offset_bottom = 68.0
texture_normal = ExtResource("18_ig36a")
texture_pressed = ExtResource("19_1rg8y")
texture_hover = ExtResource("20_2yatp")
texture_disabled = ExtResource("21_p1mr6")

[node name="Exit" type="TextureButton" parent="Settings/Menu"]
layout_mode = 0
offset_left = 24.0
offset_top = 504.0
offset_right = 264.0
offset_bottom = 552.0
texture_normal = ExtResource("22_oby7b")
texture_pressed = ExtResource("23_1oqg4")
texture_hover = ExtResource("24_fv0ek")
texture_disabled = ExtResource("25_ogjf2")

[node name="Icon" type="TextureRect" parent="Settings/Menu/Exit"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("9_vb3w7")

[node name="Text" type="Label" parent="Settings/Menu/Exit"]
layout_mode = 0
offset_left = 40.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Text.Close"
label_settings = SubResource("LabelSettings_r7tdu")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[connection signal="pressed" from="Front/Menu/Play" to="Front/Menu" method="_on_play_button_pressed"]
[connection signal="pressed" from="Front/Menu/Settings" to="Front/Menu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="Front/Menu/Quit" to="Front/Menu" method="_on_quit_button_pressed"]
[connection signal="pressed" from="Settings/Menu/StartingMap/Board/Left" to="Settings/Menu" method="_on_board_left_pressed"]
[connection signal="pressed" from="Settings/Menu/StartingMap/Board/Right" to="Settings/Menu" method="_on_board_right_pressed"]
[connection signal="pressed" from="Settings/Menu/StartingMap/Set/Left" to="Settings/Menu" method="_on_set_left_pressed"]
[connection signal="pressed" from="Settings/Menu/StartingMap/Set/Right" to="Settings/Menu" method="_on_set_right_pressed"]
[connection signal="pressed" from="Settings/Menu/Volume/Left" to="Settings/Menu" method="_on_volume_left_pressed"]
[connection signal="pressed" from="Settings/Menu/Volume/Right" to="Settings/Menu" method="_on_volume_right_pressed"]
[connection signal="pressed" from="Settings/Menu/Language/Left" to="Settings/Menu" method="_on_language_left_pressed"]
[connection signal="pressed" from="Settings/Menu/Language/Right" to="Settings/Menu" method="_on_language_right_pressed"]
[connection signal="pressed" from="Settings/Menu/Exit" to="Settings/Menu" method="_on_exit_button_pressed"]
